@@ -1,27 +1,31 @@
 /*-------------------------------------------------------------------------
-  ser_ir.c - source file for serial routines 
-  
-  Written By - Josef Wolf <jw@raven.inka.de> (1999) 
-  
-	 This program is free software; you can redistribute it and/or modify it
-	 under the terms of the GNU General Public License as published by the
-	 Free Software Foundation; either version 2, or (at your option) any
-	 later version.
-	 
-	 This program is distributed in the hope that it will be useful,
-	 but WITHOUT ANY WARRANTY; without even the implied warranty of
-	 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-	 GNU General Public License for more details.
-	 
-	 You should have received a copy of the GNU General Public License
-	 along with this program; if not, write to the Free Software
-	 Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-	 
-	 In other words, you are welcome to use, share and improve this program.
-	 You are forbidden to forbid anyone else to use, share and improve
-	 what you give them.   Help stamp out software-hoarding!
+   ser_ir.h - source file for serial routines
 
+   Copyright (C) 1999, Josef Wolf <jw AT raven.inka.de>
+
+   This library is free software; you can redistribute it and/or modify it
+   under the terms of the GNU General Public License as published by the
+   Free Software Foundation; either version 2.1, or (at your option) any
+   later version.
+
+   This library is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License 
+   along with this library; see the file COPYING. If not, write to the
+   Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
+   MA 02110-1301, USA.
+
+   As a special exception, if you link this library with other files,
+   some of which are compiled with SDCC, to produce an executable,
+   this library does not by itself cause the resulting executable to
+   be covered by the GNU General Public License. This exception does
+   not however invalidate any other reasons why the executable file
+   might be covered by the GNU General Public License.
 -------------------------------------------------------------------------*/
+
 #include "ser_ir.h"
 
 /* This file implements a serial interrupt handler and its supporting
@@ -45,7 +49,8 @@ static unsigned char __pdata rbuf[RBUFLEN], xbuf[XBUFLEN];
 static unsigned char rcnt, xcnt, rpos, xpos;
 static __bit busy;
 
-void ser_init (void)
+void
+ser_init (void)
 {
    ES = 0;
    rcnt = xcnt = rpos = xpos = 0;  /* init buffers */
@@ -58,7 +63,8 @@ void ser_init (void)
    ES = 1;
 }
 
-void ser_handler (void) __interrupt 4
+void
+ser_handler (void) __interrupt 4
 {
    if (RI) {
 	   RI = 0;
@@ -77,7 +83,8 @@ void ser_handler (void) __interrupt 4
    }
 }
 
-void ser_putc (unsigned char c)
+void
+ser_putc (unsigned char c)
 {
    while (xcnt >= XBUFLEN) /* wait for room in buffer */
 	   ;
@@ -91,7 +98,8 @@ void ser_putc (unsigned char c)
    ES = 1;
 }
 
-unsigned char ser_getc (void)
+unsigned char
+ser_getc (void)
 {
    unsigned char c;
    while (!rcnt)   /* wait for character */
@@ -104,9 +112,11 @@ unsigned char ser_getc (void)
    ES = 1;
    return (c);
 }
+
 #pragma save
 #pragma noinduction
-void ser_puts (unsigned char *s)
+void
+ser_puts (unsigned char *s)
 {
    unsigned char c;
    while (c=*s++) {
@@ -115,7 +125,9 @@ void ser_puts (unsigned char *s)
    }
 }
 #pragma restore
-void ser_gets (unsigned char *s, unsigned char len)
+
+void
+ser_gets (unsigned char *s, unsigned char len)
 {
    unsigned char pos, c;
 
@@ -129,12 +141,14 @@ void ser_gets (unsigned char *s, unsigned char len)
    s[pos] = '\0';
 }
 
-unsigned char ser_can_xmt (void)
+unsigned char
+ser_can_xmt (void)
 {
    return XBUFLEN - xcnt;
 }
 
-unsigned char ser_can_rcv (void)
+unsigned char
+ser_can_rcv (void)
 {
    return rcnt;
 }
